adding some basic styling

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <div class="form">
-            <h4>Zerodha Discrepancies Filler</h4>
-            <label for="input">JSON Input: </label>
+            <div class="title">Zerodha Discrepancies Filler</div>
+            <label for="input" class="label">JSON Input: </label>
             <textarea id="input" name="input"></textarea>
 
-            <div class="type-box">
+            <div class="type-box label">
                 <label>Type:</label>
                 <input type="radio" id="other" name="type" value="other" checked>
                 <label for="radio">Other</label>
