added loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,11 @@
             </div>
         </div>
 
+        <div id="loader" class="loading-container no-show">
+            <div class="loader"></div>
+            <div class="">Processing...</div>
+        </div>
+
         <div id="not-applicable" class="not-applicable">
             <div class="title">Zerodha Discrepancies Filler</div>
             <div class="warning">
