minor changes to processing screen and added demo video

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,9 @@
         </div>
 
         <div id="loader" class="loading-container no-show">
+            <div class="title">Zerodha Discrepancies Filler</div>
             <div class="loader"></div>
-            <div class="">Processing...</div>
+            <div class="processing">Processing...</div>
         </div>
 
         <div id="not-applicable" class="not-applicable">
