added icons and minor changes

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
             <div class="title">Zerodha Discrepancies Filler</div>
             <div class="loader"></div>
             <div class="processing">Processing...</div>
+            <div >Please do not close the extension window while processing</div>
         </div>
 
         <div id="not-applicable" class="not-applicable">
